--- a/findyourway-be/src/main/resources/application.properties
+++ b/findyourway-be/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # EMBEDDED TOMCAT CONFIGURATION
-server.port=8080
+server.port=5000
 
 # DATA SOURCE CONFIGURATION
 spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
@@ -13,6 +13,6 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comment=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # ACTUATOR CONFIGURATION
