--- a/findyourway-be/buildspec.yml
+++ b/findyourway-be/buildspec.yml
@@ -1,14 +1,14 @@
-version: 0.1
+version: 0.2
 
 phases:
  build:
-   commands:
+  commands:
      - echo Build started on `date`
      - mvn test
  post_build:
    commands:
      - echo Build completed on `date`
-     - mvn package
+     - mvn clean package
 artifacts:
  files:
   - target/FindYourWayBE-0.0.1-SNAPSHOT.jar
