--- a/pom.xml
+++ b/pom.xml
@@ -83,5 +83,10 @@
 			<artifactId>ojdbc7</artifactId>
 			<version>12.1.0</version>
 		</dependency>
+		<dependency>
+            		<groupId>com.oracle</groupId>
+            		<artifactId>ojdbc6</artifactId>
+            		<version>12.1.0.1-atlassian-hosted</version>
+        	</dependency>
 	</dependencies>
 </project>
