--- a/pom.xml
+++ b/pom.xml
@@ -79,14 +79,16 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc7</artifactId>
-			<version>12.1.0</version>
-		</dependency>
-		<dependency>
-            		<groupId>com.oracle</groupId>
-            		<artifactId>ojdbc6</artifactId>
-            		<version>12.1.0.1-atlassian-hosted</version>
-        	</dependency>
+			    <groupId>com.oracle</groupId>
+			    <artifactId>ojdbc7</artifactId>
+			    <version>12.1.0.2</version>
+			</dependency>
+		    </dependencies>
 	</dependencies>
+		<repositories>
+			<repository>
+			    <id>codelds</id>
+			    <url>https://code.lds.org/nexus/content/groups/main-repo</url>
+			</repository>
+		    </repositories>
 </project>
